ipc/ipdl/test/ipdl/ok/Pmaybe_Basic.ipdl
protocol Pmaybe_Basic {
child:
    async Msg(int? maybe);
};
