ipc/ipdl/test/ipdl/error/PUniquePtrRecursive.ipdl
//error: bad syntax near `UniquePtr'

protocol PUniquePtrRecursive {
child: async Msg( UniquePtr< UniquePtr<int> > aa);
};
